--- a/Server/config/config.ini
+++ b/Server/config/config.ini
@@ -18,17 +18,7 @@ job_id_cast = 0
 job_id_director = 1
 
 [TTS]
-path = ./sound/output.mp3
+key_path = config/sincere-stack-307000-836c8778a98c.json
 
 [Log]
 dir = ../ServerLog
-
-[TEMPLETE]
-yes = はい、そうです
-no = いいえ、違います
-pardon = すみません、もう一度言ってください
-unknown = すみません、わかりません
-followup = なるほど
-summarize = 観にいく映画は決まりましたか
-start = どんな映画がみたいですか
-end = 行ってらっしゃい
