fix bug in robot_controller

--- a/Server/config/config.ini
+++ b/Server/config/config.ini
@@ -17,6 +17,9 @@ director_detail_num = 3
 job_id_cast = 0
 job_id_director = 1
 
+[STT]
+ip = http://34.82.185.230:9001
+
 [TTS]
 key_path = config/dialogsys-8962938dd5f3.json
 
