--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -30,6 +30,23 @@
             "cwd": "${workspaceRoot}/Server"
         },
         {
+            "name": "speech_recognition_stub",
+            "type": "python",
+            "request": "launch",
+            "module": "flask",
+            "env": {
+                "FLASK_APP": "app.py",
+                "FLASK_ENV": "development",
+                "GEVENT_SUPPORT": "True",
+            },
+            "args": [
+                "run",
+                "--no-debugger"
+            ],
+            "jinja": true,
+            "cwd": "${workspaceRoot}/speech_recognition_stub"
+        },
+        {
             "type": "pwa-chrome",
             "request": "launch",
             "name": "Launch Chrome against localhost",
