--- a/Server/config/config.ini
+++ b/Server/config/config.ini
@@ -33,4 +33,5 @@ dir = ../ServerLog
 test = test
 
 [UserManager]
-url=ws://localhost:8000/websocket
+; url=ws://localhost:8000/websocket
+url=wss://sakura2.fujielab.org/websocket
